【virmem-vmstat-add】添加vmstat测试工具

--- a/tools/vmstat/Makefile
+++ b/tools/vmstat/Makefile
@@ -1,6 +1,5 @@
 ################################################################################
-# http://www.cs.virginia.edu/stream/FTP/Code/stream.c
-BUILD := stream
+BUILD := vmstat
 ################################################################################
 .PHONY: $(BUILD) clean distclean
 defalut: $(BUILD)
